@@ -1,5 +1,5 @@
 require 'json/version'
-require 'json/light_object'
+require 'json/generic_object'
 
 module JSON
   class << self
